--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,18 +4,32 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #444444;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #444444;
   }
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
+}
+
+@keyframes revealText {
+  from {
+    clip-path: inset(0 100% 0 0);
+  }
+  to {
+    clip-path: inset(0 0 0 0);
+  }
+}
+
+.animate-reveal-text {
+  animation: revealText 0.25s ease-out forwards;
+  display: inline-block;
 }
