--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,9 +135,14 @@ a:hover, button:hover, [role="button"]:hover {
 
 .info-column {
   flex: 1;
-  height: 70vh;
+  height: 75vh;
   overflow-y: auto;
   padding: 1rem;
+  border-right: 1px solid currentColor;
+}
+
+.info-column:last-child {
+  border-right: none;
 }
 
 .info-column-left {
@@ -215,4 +220,26 @@ a:hover, button:hover, [role="button"]:hover {
   --backdrop-filter: brightness(25%) blur(1.7px);
   --shadow-light: rgba(255, 255, 255, 0.2);
   --shadow-dark: rgba(0, 0, 0, 0.8);
+}
+
+:root {
+  --background-color-rgb: 255,255,255;
+  --background-color: rgb(var(--background-color-rgb));
+  --color-text-rgb: 0,0,0;
+  --color-text: rgb(var(--color-text-rgb));
+  --color-deemphasized-text-rgb: 179,179,179;
+  --color-deemphasized-text: rgb(var(--color-deemphasized-text-rgb));
+  --font-style-normal: normal;
+  --font-style-active: italic;
+  --bar-height: 50px;
+  --bar-clearance: 65px;
+}
+
+[data-theme='dark'] {
+  --background-color-rgb: 0,0,0;
+  --color-text-rgb: 255,255,255;
+}
+
+.fixed {
+  z-index: 50;
 }
