--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -377,32 +377,61 @@ a:hover, button:hover, [role="button"]:hover {
   object-fit: cover;
 }
 
-.work-detail-container {
-  display: grid;
-  grid-template-columns: 3fr 2fr;
-  gap: 3rem;
+.work-detail-layout {
+  display: flex;
+  max-height: 88vh;
   max-width: 1600px;
-  margin: 2rem auto;
+  margin: 0 auto;
+  padding: 2rem;
   padding-left: 5rem;
   padding-right: 5rem;
+  padding-top: 4.5rem;
+  position: relative;
+}
+
+.work-detail-images {
+  width: 60%;
+  overflow-y: scroll;
+  padding-right: 2rem;
 }
 
 .work-detail-image {
-  position: relative;
   width: 100%;
+  margin-bottom: 2rem;
 }
 
 .detail-image {
   width: 100%;
   height: auto;
   object-fit: contain;
+  cursor: pointer;
+}
+
+.sub-images-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.sub-image-wrapper {
+  width: 100%;
+  cursor: pointer;
+}
+
+.sub-image {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
 }
 
 .work-detail-info {
-  padding: 2rem 0;
+  width: 40%;
+  overflow-y: scroll;
+  padding: 0 1rem;
   font-family: var(--font-office-times-round);
   font-size: 14px;
-  line-height:0.1rem;
+  line-height: 1.3rem;
 }
 
 .info-item {
@@ -577,4 +606,21 @@ a:hover, button:hover, [role="button"]:hover {
 
 .navbar-return:hover {
   opacity: 0.7;
+}
+
+.sub-images-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+.sub-image-container {
+  cursor: pointer;
+}
+
+.sub-image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
