--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -618,3 +618,18 @@ a:hover, button:hover, [role="button"]:hover {
   height: auto;
   object-fit: cover;
 }
+
+.bio-page-container {
+  display: flex;
+  height: 88vh;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-top: 4.5rem;
+  font-family: var(--font-office-times-round);
+  font-size: 14px;
+  line-height: 1.3rem;
+  position: relative;
+}
